# updater

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: onpush.yml  release.yml
src/: launcher.rs  locker.rs  main.rs  platform.rs  version.rs
src/config/: mod.rs  provider.rs  update.rs
src/platform/: linux.rs  macos.rs  mod.rs  os.rs  windows.rs
src/provider/: github.rs  mod.rs
src/update/: application.rs  download.rs  mod.rs  progress.rs  selfexe.rs  zip.rs
src/window/: linux.rs  mod.rs  wc.rs  windows.rs
updater/: Cargo.toml
updater-bin/: Cargo.toml  build.rs
updater-bin/src/: launcher.rs  main.rs  version.rs
updater-bin/src/config/: application.rs  provider.rs
updater-bin/src/update/: application.rs  mod.rs  selfexe.rs
updater/src/: config.rs  extract.rs  lib.rs  locker.rs  progress.rs  updater.rs  version.rs
updater/src/procedures/: application.rs  mod.rs  selfexe.rs
updater/src/provider/: github.rs  mod.rs
updater/src/update/: download.rs  extract.rs  mod.rs  procedure.rs  progress.rs  step.rs
updater/src/window/: config.rs  linux.rs  mod.rs  wc.rs  windows.rs
