[package]
name = "updater"
version = "0.1.1"
authors = ["Csányi István <icsanyi96@gmail.com>"]
edition = "2018"
publish = false
repository = "https://github.com/AmionSky/updater"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
json = { package = "serde_json", version = "1" }
simplelog  = "0.7"
toml = "0.5"
log = "0.4"
fs2 = "0.4"
semver = "0.9"
ureq = "0.11"
regex = "1"
lazy_static = "1"
tempfile = "3"
zip = "0.5"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false