[package]
name = "updater"
version = "0.1.2"
authors = ["Csányi István <icsanyi96@gmail.com>"]
edition = "2018"
publish = false
repository = "https://github.com/AmionSky/updater"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
json = { package = "serde_json", version = "1" }
simplelog  = "0.7"
toml = "0.5"
log = "0.4"
fs2 = "0.4"
semver = "0.9"
ureq = "1"
regex = "1"
lazy_static = "1"
tempfile = "3"
zip = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }

[target.'cfg(target_os="linux")'.dependencies]
gtk = { version = "0.8.1", features = ["v3_24_8"], optional = true }
gio = { version = "0.8.1", features = ["v2_60"], optional = true }

[features]
default = []
progress-window = ["gtk", "gio"]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false