[package]
name = "updater-bin"
version = "0.3.4"
authors = ["Csányi István <csanyistvan02@gmail.com>"]
edition = "2021"

[dependencies]
updater = { path = "../updater", features = ["window", "extract", "procedures"] }
serde = { version = "1", features = ["derive"] }
toml = "0.7"
log = "0.4"
semver = "1"
simplelog  = "0.12"

[target.'cfg(target_os="windows")'.dependencies]
windows-sys = { version = "0.45.0", features = ["Win32_Foundation", "Win32_System_Console"] }