[package]
name = "updater"
version = "0.3.0"
authors = ["Csányi István <icsanyi96@gmail.com>"]
edition = "2018"
publish = false
repository = "https://github.com/AmionSky/updater"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
json = { package = "serde_json", version = "1" }
log = "0.4"
fs2 = "0.4"
semver = "0.10"
ureq = "1"
regex = "1"
lazy_static = "1"
tempfile = "3"
zip = { version = "0.5", optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }

[target.'cfg(target_os="windows")'.dependencies]
nwg = { package = "native-windows-gui", git = "https://github.com/AmionSky/native-windows-gui", branch = "marquee-fix",  features = ["progress-bar","timer"], optional = true }

[target.'cfg(target_os="linux")'.dependencies]
gtk = { version = "0.9", features = ["v3_16"], optional = true }
gio = { version = "0.9", features = ["v2_44"], optional = true }

[features]
default = ["procedures"]
window = ["gtk", "gio", "nwg"]
extract = ["ext-zip", "ext-targz"]
ext-zip = ["zip"]
ext-targz = ["flate2", "tar"]
procedures = []

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false