[package]
name = "updater"
version = "0.4.0"
authors = ["Csányi István <icsanyi96@gmail.com>"]
edition = "2018"
publish = false
repository = "https://github.com/AmionSky/updater"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
json = { package = "serde_json", version = "1" }
log = "0.4"
fs2 = "0.4"
semver = "1"
ureq = { version = "2", default-features = false, features = ["tls"] }
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
lazy_static = "1"
tempfile = "3"
zip = { version = "0.5", optional = true, default-features = false, features = ["bzip2", "deflate"] }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }

[target.'cfg(target_os="windows")'.dependencies.nwg]
package = "native-windows-gui"
version = "1"
features = ["progress-bar", "timer"]
optional = true

[target.'cfg(target_os="linux")'.dependencies]
gtk = { version = "0.9", features = ["v3_16"], optional = true }
gio = { version = "0.9", features = ["v2_44"], optional = true }
glib = { version = "0.10", optional = true }

[features]
default = ["procedures"]
window = ["gtk", "gio", "glib", "nwg"]
extract = ["ext-zip", "ext-targz"]
ext-zip = ["zip"]
ext-targz = ["flate2", "tar"]
procedures = []
