[package]
name = "updater"
version = "0.4.0"
authors = ["Csányi István <icsanyi96@gmail.com>"]
edition = "2018"
publish = false
repository = "https://github.com/AmionSky/updater"
license = "MIT"

[dependencies]
log = "0.4"
lazy_static = "1"
# Locker
fs2 = "0.4"
# Version
semver = "1"
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
# Provider
ureq = { version = "2", default-features = false, features = ["tls"] }
tempfile = "3"
# GitHub
serde = { version = "1", features = ["derive"] }
json = { package = "serde_json", version = "1" }
# Extract
zip = { version = "0.5", optional = true, default-features = false, features = ["bzip2", "deflate"] }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
# Windowing
crossbeam-channel = { version = "0.5", optional = true }

[target.'cfg(target_os="windows")'.dependencies]
nwg = { package = "native-windows-gui", version = "1", optional = true, features = ["progress-bar", "timer"] }

[target.'cfg(target_os="linux")'.dependencies]
gtk = { version = "0.14", features = ["v3_20"], optional = true }
glib = { version = "0.14", features = ["v2_50"],  optional = true }

[features]
default = ["procedures"]
window = ["gtk", "glib", "nwg", "crossbeam-channel"]
extract = ["ext-zip", "ext-targz"]
ext-zip = ["zip"]
ext-targz = ["flate2", "tar"]
procedures = []
